--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Test Gh</title>
+  <meta charset="UTF-8">
+  <title>Test Gh</title>
 </head>
 <body>
-<h1>Hello Github3</h1>
+<h1>Hello Github30</h1>
+<h2>Commit2</h2>
+<h3>Commit3</h3>
 </body>
 </html>
